styles.css
@import url('https://fonts.googleapis.com/css2?family=Gloock&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');

html{
    font-family: 'Playfair Display', 'Gloock', serif;
    background: #dbd8d0;
}

.container {
    text-align: center;
  }


.profile-pic img {
    width: 400px; 
    height: 400px; 
    border-radius: 50%; 
    object-fit: cover; 
    display: block;
    margin-left: auto;
    margin-right: auto;

    }

.introduction p{
    text-align: center; 
}

.arrow {
    border: solid black;
    border-width: 0 6px 6px 0;
    display: inline-block;
    padding: 6px;
    margin-top: 250px;
    align-items: center;
  }

.down {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.centered_content{
  display: flex;
  justify-content: center;
  align-items: center;
}

.guitar1 {
  width:25%;
  height:25%;
  border-radius: 50%;
  
}

.moving-image1{
  transition: transform 2s ease;
}

.guitar1:hover.moving-image1 {
  transform: translateX(-110%); 
}


  

